# rigel

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  testlevel.tmx
resource/entity/: entities.json
resource/image/: pc.aseprite  pc.json  pcoutline.json  simplestage.aseprite  tiles_merged.ase  tranquil_tunnels_transparent.json
resource/map/: layered2.tmj  layered2.tmx  layeredlevel.tmj  layeredlevel.tmx  next.tmj  objext.tmx  simplebak.tmx  simplelevel.tmx  testmap.csv  testmap.tmx  testoutdoor.tmj
resource/shader/: fs_bg.glsl  fs_dbg_line.glsl  fs_entity.glsl  fs_map.glsl  fs_map_batched.glsl  fs_quad.glsl  fs_shadowmap.glsl  fs_sprite.glsl  fs_tri.glsl  vs_bg.glsl  vs_dbg_line.glsl  vs_entity.glsl  vs_map.glsl  vs_map_batched.glsl  vs_quad.glsl  vs_shadowmap.glsl  vs_sprite.glsl  vs_tri.glsl
resource/tiled/: rigel.tiled-project  rigel.tiled-session  tiles_merged.tsx
resource/tiled/stage_1/: bridge_approach.tmj  emptysky.tmj  freal_junction.tmj  junction.tmj  lil_mountain.tmj  mountain_back.tmj  mtnsky.tmj  ravine_bridge.tmj  ravine_lower.tmj  ravine_upper.tmj  spidercave.tmj  stage_1.world  stage_exit.tmj  start_room.tmj  stick_spikes.tmj  towards_spider.tmj  towards_stick.tmj
src/: '  collider.cpp  collider.h  debug.cpp  debug.h  entity.cpp  entity.h  fs_linux.cpp  fs_linux.h  game.cpp  game.h  input.h  input_sdl.cpp  json.cpp  json.h  main_glfw.cpp  main_sdl.cpp  math.h  mem.h  phys.cpp  phys.h  render.cpp  render.h  resource.cpp  resource.h  rigel.h  rigelmath.h  tilemap.cpp  tilemap.h  timer.h  trigger.cpp  trigger.h  utility.h  world.cpp  world.h
src-old/: collider.h  db.h  entity.cpp  entity.h  game.cpp  game.h  main_glfw.cpp  mem.h  phys.cpp  phys.h  render.cpp  render.h  resource.cpp  resource.h  rigel.h  world.cpp
tools/memtest/: memtest.cpp
